<resources>
    <string name="app_name">HamIOT</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">New account</string>
    <string name="display_name">Display name</string>
    <string name="create_account">Create a new account</string>
    <string name="restore_account">Restore backup account</string>
    <string name="or">OR</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="unsupported_qr_code">This qr code is not supported</string>
    <string name="fail_get_balance">Failure to get balance</string>
    <string name="error_network">Network error</string>
    <string name="transfer_asset">Transfer asset</string>
    <string name="transfer_to">Transfer to</string>
    <string name="add_asset">Make asset</string>
    <string name="amount">Amount</string>
    <string name="hmt">HMT</string>
    <string name="transfer">Transfer</string>
    <string name="successfully_transfer_message">The transfer has successful.</string>
    <string name="logout_confirm_message">Do you want to log out?</string>
    <string name="successfully_backup_account">The backup file was created successfully.</string>
    <string name="history">History</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="more">More</string>

    <string name="error_create_account">Failure to create new account</string>
    <string name="error_invalid_amount">Amount is invalid</string>
    <string name="error_transfer">Failure to transfer</string>
    <string name="error_add_asset">Failure to add asset</string>
    <string name="error_backup_account">Failure to backup account file</string>
    <string name="error_restore_account">Failure to restore account</string>

    <string name="notification_normal_channel_name">Normal notification</string>
    <string name="notification_normal_channel_description">Notification when sent and received assets</string>
    <string name="notification_title_when_received">HamIOT Received</string>
    <string name="notification_title_when_sent">HamIOT Sent</string>
    <string name="notification_destination_when_received">Received %s HMT from %s</string>
    <string name="notification_destination_when_sent">Sent %s HMT to %s</string>

    <string name="main_menu_item_make_money">Make asset</string>
    <string name="main_menu_item_history">History</string>
    <string name="main_menu_item_backup">Backup account</string>
    <string name="main_menu_item_logout">Logout</string>

    <string name="backup_account_description">Input password for encrypting your private key.</string>
    <string name="backup_account_input_password">Input password</string>
    <string name="backup_account_repeat_password">Repeat password</string>

    <string name="restore_account_description">Input password for decrypting your private key.</string>
    <string name="restore_account_input_password">Input password</string>
</resources>