<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transfer_asset.TransferAssetFragment">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel"
            type="com.ishihata_tech.hamiot_client.ui.transfer_asset.TransferAssetViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/transfer_asset" />

        <TextView
            android:id="@+id/text_transfer_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/transfer_to"/>

        <TextView
            android:id="@+id/text_opponent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_transfer_to"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:textSize="30sp"
            tools:text="Opponent name"/>

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_opponent_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/amount"/>

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_hmt"
            android:layout_marginTop="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:textSize="40sp"
            android:gravity="end"
            android:inputType="number"
            tools:text="99999"/>

        <TextView
            android:id="@+id/text_hmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/edit_amount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:text="@string/hmt"/>

        <Button
            android:id="@+id/button_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:text="@string/transfer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>